2004-07-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b23

	* Change: Add a couple missing parens

2004-07-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b22

	* Change: Standardize on getRequestVar instead of Get/Post/Cookie

	* Change: $_SERVER is a trusted source.. no need to sanitize.

2004-07-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b21

	* Change: get(Request|Get|Post|Files|Env|Server)Vars() functions.
	  TODO - Add XSS filtering

2004-07-14 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b20

	* Change: Tweaked modules.php again.

2004-07-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b19

	* Change: Forgot a !

2004-07-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b18

	* Change: First minor changes for 1.4.5.  Set the required
	  PHP version to 4.1.0, and add a setup function to check for 
	  the status of register_globals.

2004-07-13  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b17

	* Change: Give clickable dimensions their own table row to prevent
	  a scenario where they appear *beside* the image

2004-07-14 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b16

	Fix: Use getImagePath for voting result bars.
	     Voting bars were not skinable. (caught by Jade)

	Fix: Adapted modules.php for phpBB2 2.0.9

2004-07-13  Alan Harder <alan.harder@sun.com>  1.4.5-cvs-b15

	* $album->save() after rehighlight in makeThumbnail() so new size is saved.

2004-07-13  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b14

	* Fix: Added missing " in albums.php.
	  This caused every link after find orphans to be b0rked.

	* Fix: Added missing / to link to configwizard.

2004-07-13  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b13

	* Change: Add a 'rssMaxAlbums' option to the RSS page in the config wizard,
	  specifying the maximum number of changed albums to be returned in
	  the feed.  Defaults to 25.

	* Change: Try and optimize the number of times we use isHiddenRecurse and