@@ -1,3 +1,7 @@
+2004-07-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b24
+
+	* Change: Don't try and create clickable dimensions on albums.
+
 2004-07-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b23
 
 	* Change: Add a couple missing parens
